# sayisal-tasarim-mantik-devresi-simulatoru

./: .gitignore  README.md  pyproject.toml
src/sayisal_tasarim_simulatoru/: __init__.py  gui.py  logic.py  main.py
tests/: test_logic.py
